cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -std=c++11 ${LLVM_CXX_FLAGS} ")
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_HOME_DIRECTORY}/bin)

include_directories(${CMAKE_SOURCE_DIR}/include)
include_directories(${CMAKE_SOURCE_DIR}/example/Interfaces)
include_directories(${CMAKE_SOURCE_DIR}/src/Backend/PrintITL)
include_directories(${CMAKE_SOURCE_DIR}/src/Backend/PrintDot)
include_directories(${CMAKE_SOURCE_DIR}/src/Backend)
include_directories(${CMAKE_SOURCE_DIR}/src/ParseAML)
include_directories(${CMAKE_SOURCE_DIR}/src/global/)
include_directories(${CMAKE_SOURCE_DIR}/src/PropertySynth/)
include_directories(${CMAKE_SOURCE_DIR}/src/Model/)
include_directories(${CMAKE_SOURCE_DIR}/src/ParseSystemC)
include_directories(${CMAKE_SOURCE_DIR}/src/ParseSystemC/CFG)
include_directories(${CMAKE_SOURCE_DIR}/src/Model/Behavior)
include_directories(${CMAKE_SOURCE_DIR}/src/Model/Stmts)
include_directories(${CMAKE_SOURCE_DIR}/tests/)

add_subdirectory(src)
add_subdirectory(example)
add_subdirectory(tests)
add_subdirectory(doc)
