add_library(Stmts
        Assignment.cpp
        Stmt.h
        Operand.h
        VariableOperand.cpp
        IntegerValue.cpp
        PortOperand.cpp
        ConstValue.cpp
        UnaryExpr.cpp
        While.cpp
        If.cpp
        BoolValue.cpp
        SectionOperand.cpp
        SectionValue.cpp
        ITE.cpp
        Branch.cpp
        Arithmetic.cpp
        StmtAbstractVisitor.h
        EnumValue.cpp
        Expr.cpp
        Operand.cpp
        Read.cpp
        Write.cpp
        NBRead.cpp
        NBWrite.cpp
        Logical.cpp
        Relational.cpp
        SyncSignal.cpp
        Communication.cpp
        Bitwise.cpp
        CompoundValue.cpp
        DataSignalOperand.cpp
        UnsignedValue.cpp
        Cast.cpp Cast.h FunctionOperand.cpp FunctionOperand.h SubSelect.cpp SubSelect.h
        CompoundExpr.cpp CompoundExpr.h ParamOperand.cpp ParamOperand.h Return.cpp Return.h)